--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
     body{
         margin: 0px;
         padding: 0px;
-        background: url(/bg1.jpg);
+        background: url(bg1.jpg);
     }
 </style>
 <body>
@@ -22,7 +22,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
             </svg>
-            <span class="ml-5 text-xl">Interview Tracker</span>
+            <span class="ml-5 text-xl">INTERVIEW TRACKER</span>
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
             <% if(user){ %>
@@ -30,7 +30,6 @@
                 <% if(user.admin){ %>
                     <a href="/admin" class="mr-5 hover:text-white">ADMIN PAGE</a>
                 <% } %>
-                    <a href="/" class="mr-5 hover:text-white">HOME</a>
                     <a href="/logout" class="mr-5 hover:text-white">LOG OUT</a>
                 
             <% }else{ %>   
@@ -55,14 +54,14 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="object-cover object-center rounded" alt="hero" src="/iitg1.jpg"  alt="...">
+                    <img class="object-cover object-center rounded" alt="hero" src="iitg1.jpg"  alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>We will show you the way.</h5>
                       <p>You just have to walk on it.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img class="object-cover object-center rounded" alt="hero" src="/iit.jpg"  alt="...">
+                    <img class="object-cover object-center rounded" alt="hero" src="iit.jpg"  alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>Topics and questions in right order</h5>
                       <p>Understanding topics in right order is very important.</p>
@@ -88,7 +87,7 @@
           </div>
           <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
             <h1 class="title-font sm:text-5xl text-6xl mb-4 font-medium text-white">One Stop for your Interview</h1>
-            <p class="mb-8 leading-relaxed text-white sm:text-1.7xl">Practice Coding Interview Questions. Give us time and we get you the job you deserve.</p>
+            <p class="mb-8 leading-relaxed text-white sm:text-1.7xl">Give us time and we get you the job you deserve.</p>
             <!-- <div class="flex justify-center">
               <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
               <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Button</button>
@@ -106,7 +105,7 @@
                 <img alt="content" class="object-cover object-center h-full w-full" src="/1.jpg">
               </div>
               <h2 class="title-font text-2xl font-medium text-white mt-6 mb-3">Coding Interview Questions</h2>
-              <p class="leading-relaxed text-base text-white">Get topics and interview problems in the right order..</p>
+              <p class="leading-relaxed text-base text-white">Get topics and interview problems in the right order.</p>
               <a href="/topics"><button class="flex mx-auto mt-6 text-white bg-indigo-500 border-0 py-2 px-5 focus:outline-none hover:bg-indigo-600 rounded">Start Practicing</button></a>
             </div>
             <div class="sm:w-1/2 mb-5 px-20">
