--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,12 +1,5 @@
 
-body {
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    color: #888;
-    line-height: 30px;
-    text-align: center;
-}
+
 
 strong { font-weight: 500; }
 
@@ -16,7 +9,7 @@ a, a:hover, a:focus {
     -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
 }
 
-h1, h2 {
+/* h1, h2 {
 	margin-top: 10px;
 	font-size: 38px;
     font-weight: 100;
@@ -29,12 +22,12 @@ h3 {
     font-weight: 300;
     color: #555;
     line-height: 30px;
-}
+} */
 
-img { max-width: 100%; }
+/* img { max-width: 100%; }
 
 ::-moz-selection { background: #fd625e; color: #fff; text-shadow: none; }
-::selection { background: #fd625e; color: #fff; text-shadow: none; }
+::selection { background: #fd625e; color: #fff; text-shadow: none; } */
 
 
 .btn-link-1 {
