--- a/views/interview/company.ejs
+++ b/views/interview/company.ejs
@@ -42,14 +42,14 @@
         </div>
       </header>
     <section class="text-gray-400 body-font ">
-        <div class="container px-5 py-24 mx-auto">
+        <div class="container px-5 py-20 mx-auto">
             
           <div class="flex flex-wrap w-full mb-20">
-            <div class="lg:w-1/2 w-full mb-6 lg:mb-0">
-              <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">Companies</h1>
-              <div class="h-1 w-20 bg-indigo-500 rounded"></div>
+            <div class="lg:w-1/2 w-full mb-0 lg:mb-0">
+              <h1 class="sm:text-4xl text-2xl font-medium title-font mb-2 text-white">Companies</h1>
+              <!-- <div class="h-1 w-20 bg-indigo-500 rounded"></div> -->
             </div>
-            <p class="lg:w-1/2 w-full leading-relaxed text-gray-400 text-opacity-90">Learn from the mistake of your seniors ....</p>
+            <p class="lg:w-1/3 sm:text-2xl w-full leading-relaxed text-gray-400 text-opacity-90">Learn from the mistake of your seniors ....</p>
           </div>
 
           <div class="flex flex-wrap -m-4">
