--- a/views/main/question.ejs
+++ b/views/main/question.ejs
@@ -44,12 +44,12 @@
     <section class="text-gray-400 body-font ">
         <div class="container px-5 py-10 mx-auto">
             
-          <div class="flex flex-wrap w-full mb-20">
+          <!-- <div class="flex flex-wrap w-full mb-20">
             <div class="lg:w-1/2 w-full mb-4 lg:mb-0">
               <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">Questions</h1>
               <div class="h-1 w-20 bg-indigo-500 rounded"></div>
             </div>
-          </div>
+          </div> -->
 
           <div class="flex flex-wrap -m-4">
             
