--- a/views/main/topic.ejs
+++ b/views/main/topic.ejs
@@ -44,6 +44,10 @@
       </header>
     <section class="text-gray-400 body-font ">
         <div class="container px-5 py-24 mx-auto">
+          <!-- <div class="flex flex-wrap w-full mb-20">
+            <input type="checkbox" id="show">
+            <label for="show" class="show-btn">View Form</label>
+          </div> -->
 
           <div class="flex flex-wrap -m-4">
             
