--- a/views/add.ejs
+++ b/views/add.ejs
@@ -9,10 +9,20 @@
         <form id="demo2">
   
           <div class="data">
-            <label for="question">Name</label>
+            <label for="name">Name</label>
             <input type="text" name="name" required>
           </div>
-  
+          
+          <div class="data">
+            <label for="branch">Branch</label>
+            <input type="text" name="branch" required>
+          </div>
+
+          <div class="data">
+            <label for="year">Year</label>
+            <input type="text" name="year" required>
+          </div>
+
           <div class="data">
             <label for="question">Company : </label>
             <option>  </option>
@@ -70,13 +80,15 @@
         
         //get the values
         const name = form2.name.value;
+        const branch = form2.branch.value;
+        const year = form2.year.value;
         const company = form2.company.value;
         const experience = form2.experience.value;
 
         try{
             const res = await fetch('/adde',{
                 method: 'POST',
-                body:JSON.stringify({name,company,experience}),
+                body:JSON.stringify({name,branch,year,company,experience}),
                 headers:{'Content-Type':'application/json'}
             });
             location.assign('/company');
