--- a/views/interview/experience.ejs
+++ b/views/interview/experience.ejs
@@ -12,7 +12,7 @@
   body{
       margin: 0px;
       padding: 0px;
-      background: url(/sky.jpg);
+      background: url(/bg12.jpg);
   }
 </style>
 <body>
@@ -27,7 +27,6 @@
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
             <% if(user){ %>
               <a class="mr-5 hover:text-white">Welcome, <%= user.email %></a>
-              <a class="mr-5 hover:text-white"><button id="myBtn">ADD QUESTION</button></a>
               <% if(user.admin){ %>
                   <a href="/admin" class="mr-5 hover:text-white">ADMIN PAGE</a>
               <% } %>
@@ -41,7 +40,9 @@
             <% } %>
           </nav>
         </div>
-      </header><section class="text-gray-600 body-font">
+      </header>
+      
+      <section class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto">
           <div class="flex flex-wrap -m-4">
             <section class="text-gray-400 body-font">
@@ -53,11 +54,11 @@
                       <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
                         <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400" alt="blog">
                         <div class="p-6">
-                          <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">CATEGORY</h2>
-                          <h1 class="title-font text-lg font-medium text-white mb-3">The Catalyzer</h1>
-                          <p class="leading-relaxed mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+                          <h2 class="tracking-widest text-xs title-font font-medium text-white mb-1">CATEGORY</h2>
+                          <h1 class="title-font text-lg font-medium text-white mb-3"><%= experience.name %></h1>
+                          <p class="leading-relaxed text-white mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
                           <div class="flex items-center flex-wrap ">
-                            <a class="text-indigo-400 inline-flex items-center md:mb-2 lg:mb-0">Learn More
+                            <a class="text-indigo-400 inline-flex items-center md:mb-2 lg:mb-0" href="/<%= experience._id %>">Learn More
                               <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M5 12h14"></path>
                                 <path d="M12 5l7 7-7 7"></path>
