--- a/views/interview/experiencer.ejs
+++ b/views/interview/experiencer.ejs
@@ -44,14 +44,18 @@
 
       <section class="text-gray-400 body-font">
         <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
-          <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
+
+          <% if(experiencer.img.data != null && experiencer.img.contentType != null ){ %>
+            <img class="lg:h-48 md:h-36 object-cover object-center" src="data:<%=experiencer.img.contentType%>;base64,<%= experiencer.img.data.toString('base64')%>" alt="blog">
+          <% }else{ %>
+              <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400" alt="blog">
+          <% } %>
+
+          
+          
           <div class="text-center lg:w-2/3 w-full">
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-white"><%= experiencer.name %></h1>
             <p class="leading-relaxed mb-8"><%= experiencer.experience %></p>
-            <!-- <div class="flex justify-center">
-              <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
-              <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Button</button>
-            </div> -->
           </div>
         </div>
       </section>
