--- a/views/interview/experience.ejs
+++ b/views/interview/experience.ejs
@@ -12,7 +12,7 @@
   body{
       margin: 0px;
       padding: 0px;
-      background: url(/bg12.jpg);
+      background: url(/back.png);
   }
 </style>
 <body>
@@ -63,7 +63,7 @@
                         <div class="p-6">
                           <h2 class="tracking-widest text-xs title-font font-medium text-white mb-1">CATEGORY</h2>
                           <h1 class="title-font text-lg font-medium text-white mb-3"><%= experience.name %></h1>
-                          <p class="leading-relaxed text-white mb-3">Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.</p>
+                          <p class="leading-relaxed text-white mb-3"><%= experience.experience.substr(0,95) %>.......</p>
                           <div class="flex items-center flex-wrap ">
                             <a class="text-indigo-400 inline-flex items-center md:mb-2 lg:mb-0" href="/company/experience/<%= experience._id %>">Learn More
                               <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -72,15 +72,15 @@
                               </svg>
                             </a>
                             <span class="text-gray-500 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-800">
-                              <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                              <!-- <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
                                 <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
                                 <circle cx="12" cy="12" r="3"></circle>
-                              </svg>1.2K
+                              </svg> --><%= experience.branch %>
                             </span>
                             <span class="text-gray-500 inline-flex items-center leading-none text-sm">
-                              <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
+                              <!-- <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
                                 <path d="M21 11.5a8.38 8.38 0 01-.9 3.8 8.5 8.5 0 01-7.6 4.7 8.38 8.38 0 01-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 01-.9-3.8 8.5 8.5 0 014.7-7.6 8.38 8.38 0 013.8-.9h.5a8.48 8.48 0 018 8v.5z"></path>
-                              </svg>6
+                              </svg> --><%= experience.year %>
                             </span>
                           </div>
                         </div>
