--- a/views/main/topic.ejs
+++ b/views/main/topic.ejs
@@ -54,10 +54,10 @@
             <% b.forEach((topic) => { %>
               <div class="xl:w-1/4 md:w-1/2 p-4">
                 <div class="bg-gray-800 hover:bg-indigo-600 bg-opacity-40 p-6 rounded-lg">
-                  <a href="/topics/<%= topic._id %>"><img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/720x400" alt="content"></a>
+                  <a href="/topics/<%= topic._id %>"><img class="h-40 rounded w-full object-cover object-center mb-6" src="<%= topic.name %>.jpg" alt="content"></a>
                   <!-- <h3 class="tracking-widest text-indigo-400 text-xs font-medium title-font">SUBTITLE</h3> -->
                   <h2 class="text-lg text-white font-medium title-font mb-4"><a href="/topics/<%= topic._id %>"><h2><%= topic.name %></a></h2>
-                  <p class="leading-relaxed text-base">Level 1</p>
+                  <!-- <p class="leading-relaxed text-base">Level 1</p> -->
                 </div>
               </div>
             <% }) %>
