--- a/views/main/question.ejs
+++ b/views/main/question.ejs
@@ -42,30 +42,20 @@
       </header>
     <section class="text-gray-400 body-font ">
         <div class="container px-5 py-10 mx-auto">
-            
-          <!-- <div class="flex flex-wrap w-full mb-20">
-            <div class="lg:w-1/2 w-full mb-4 lg:mb-0">
-              <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-white">Questions</h1>
-              <div class="h-1 w-20 bg-indigo-500 rounded"></div>
-            </div>
-          </div> -->
-
           <div class="flex flex-wrap -m-4">
-            
             <% list.forEach((question) => { %>
               <% if(question.approv){ %>
-              <div class="xl:w-1/4 md:w-1/2 p-4">
-                <div class="tooltip bg-gray-800 hover:bg-indigo-600 bg-opacity-40 p-6 rounded-lg">
-                  
-                  
-                  
-                  <a href="<%= question.link %>"><img class="h-40 rounded w-full object-cover object-center mb-6" src="https://dummyimage.com/720x400" alt="content"></a>
-                  <h3 class="tracking-widest text-indigo-400 text-xs font-medium title-font">SUBTITLE</h3>
-                  <h2 class="text-lg text-white font-medium title-font mb-4"><a href="<%= question.link %>"><h2><%= question.name %></a></h2>
-                  <!-- <p class="leading-relaxed text-base">Level 1</p> -->
-                  <span class="tooltiptext"><%= question.link.substr(8) %></span>
+                <a href="<%= question.link %>">
+                <div class="xl:w-1/4 md:w-1/2 p-4">
+                  <div class="tooltip bg-gray-800 hover:bg-indigo-600 bg-opacity-40 p-6 rounded-lg">
+                    <img class="h-40 rounded w-full object-cover object-center mb-6" src="\<%= popo.name %>.jpg" alt="content">
+                    <h3 class="tracking-widest text-indigo-400 text-xs font-medium title-font">SUBTITLE</h3>
+                    <h2 class="text-lg text-white font-medium title-font mb-4"><a href="<%= question.link %>"><h2><%= question.name %></a></h2>
+                    <!-- <p class="leading-relaxed text-base">Level 1</p> -->
+                    <span class="tooltiptext"><%= question.link.substr(8) %></span>
+                  </div>
                 </div>
-              </div>
+              </a>
               <% } %>
             <% }) %>
 
