--- a/views/add.ejs
+++ b/views/add.ejs
@@ -40,7 +40,9 @@
 
           <div class="data">
             <label for="link">Experience</label>
-            <input type="text" name="experience" required>
+            <!-- <input type="text" name="experience" required> -->
+            <textarea rows = "9" cols = "50" name = "experience" required>
+           </textarea>
           </div>
   
           
