--- a/views/main/question.ejs
+++ b/views/main/question.ejs
@@ -48,7 +48,7 @@
                 <a href="<%= question.link %>">
                 <div class="xl:w-1/4 md:w-1/2 p-4">
                   <div class="tooltip bg-gray-800 hover:bg-indigo-600 bg-opacity-40 p-6 rounded-lg">
-                    <img class="h-40 rounded w-full object-cover object-center mb-6" src="\<%= popo.name %>.jpg" alt="content">
+                    <img class="h-40 rounded w-full object-cover object-center mb-6" src="\<%= topicname.name %>.jpg" alt="content">
                     <h2 class="text-lg text-white font-medium title-font mb-4"><a href="<%= question.link %>"><h2><%= question.name %></a></h2>
                     <span class="tooltiptext"><%= question.link.substr(8) %></span>
                   </div>
