--- a/views/interview/experience.ejs
+++ b/views/interview/experience.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/stylemodal.css">
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> 
 
-    <title>Document</title>
+    <title>Interview Prep Tracker</title>
 </head>
 <style>
   body{
@@ -71,7 +71,7 @@
                               </svg>
                             </a>
                             <span class="text-gray-500 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1 border-r-2 border-gray-800">
-                              </svg> --><%= experience.branch %>
+                              </svg><%= experience.branch %>
                             </span>
                             <span class="text-gray-500 inline-flex items-center leading-none text-sm">
                               <%= experience.year %>
