--- a/views/main/topic.ejs
+++ b/views/main/topic.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/stylemodal.css">
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> 
 
-    <title>Document</title>
+    <title>Interview Prep Tracker</title>
 </head>
 <style>
   body{
