--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
       
-      <title>Document</title>
+      <title>Interview Prep Tracker</title>
     </head>
     <style>
         body{
