--- a/views/interview/experience.ejs
+++ b/views/interview/experience.ejs
@@ -27,7 +27,7 @@
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
             <% if(user){ %>
               <a class="mr-5 hover:text-white">Welcome, <%= user.email %></a>
-              <% if(user.admin){ %>
+              <% if(isAdmin){ %>
                   <a href="/admin" class="mr-5 hover:text-white">ADMIN PAGE</a>
               <% } %>
               <a href="/" class="mr-5 hover:text-white">HOME</a>
